--- a/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -106,7 +106,7 @@
             {
                 "type": "UnityEngine.Polybrush.PolyDirection, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "RaiseLowerBrush.Direction",
-                "value": "{\"m_Value\":0}"
+                "value": "{\"m_Value\":2}"
             },
             {
                 "type": "UnityEngine.Polybrush.PolyDirection, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
@@ -126,7 +126,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"7343f4519a080490293771d8f746db6a\",\"type\":2},\"prefab\":{\"fileID\":4661435515762455780,\"guid\":\"e289bf5debb17f6459818c207d781953\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"7343f4519a080490293771d8f746db6a\",\"type\":2},\"prefab\":{\"fileID\":2222111361404534124,\"guid\":\"88f2fd29f58b9734683512546acec310\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"7343f4519a080490293771d8f746db6a\",\"type\":2},\"prefab\":{\"fileID\":6941765000743290380,\"guid\":\"c60edd51c065ceb46b345849a03bc106\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"7343f4519a080490293771d8f746db6a\",\"type\":2},\"prefab\":{\"fileID\":6941765000743290380,\"guid\":\"c60edd51c065ceb46b345849a03bc106\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"7343f4519a080490293771d8f746db6a\",\"type\":2},\"prefab\":{\"fileID\":4661435515762455780,\"guid\":\"e289bf5debb17f6459818c207d781953\",\"type\":3}}]}}"
             }
         ]
     }
